# polyflow

./: .gitignore  CMakeLists.txt  README.md  example_workflow.snakefile
include/Parsers/: SnakemakeParser.hpp
include/PolyFlow/: CMakeLists.txt  PolyFlowDialect.h  PolyFlowDialect.td  PolyFlowOps.h  PolyFlowOps.td  PolyFlowTypes.h  PolyFlowTypes.td
lib/: CMakeLists.txt
lib/Parsers/: CMakeLists.txt  README.md  SnakemakeParser.cpp
lib/PolyFlow/: CMakeLists.txt  PolyFlowDialect.cpp  PolyFlowOps.cpp
polyflow-opt/: CMakeLists.txt  polyflow-opt.cpp
test/: CMakeLists.txt  lit.cfg.py
